# notes

zoe-tech-note/: pyproject.toml
zoe-tech-note/blog/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
zoe-tech-note/blog/migrations/: 0001_initial.py  0002_tag_remove_article_tag_article_tags.py  0003_contactmessage.py
zoe-tech-note/core/: settings.py  urls.py
zoe-tech-note/static/: styles.css
zoe-tech-note/templates/: article_detail.html  base.html  contact.html  contact_limit.html  contact_success.html  create_article.html  delete_article.html  edit_article.html  index.html  search.html  tag.html
zoe-tech-note/templates/registration/: logged_out.html  login.html
